--- a/src/Component/WorkExp/WorkExp.css
+++ b/src/Component/WorkExp/WorkExp.css
@@ -1,12 +1,13 @@
 .ExpContainer {
   width: 100%;
-  height: 1000px;
+  height: 1200;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #333; /* Dark background color */
   font-family: Arial, sans-serif;
+  overflow: hidden;
 }
 .cont{
   display: flex;
@@ -82,8 +83,24 @@
   margin-left: 30px; /* Increased margin left */
   font-family: 'Brush Script', 'Lucida Handwriting', 'Comic Sans MS', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #f6f6f6; /* Light text color */
+  overflow: hidden;
   position: sticky;
-  width: auto;
+}
+
+.job-description {
+  flex: 1 1 100%;
+  margin-top: 10px;
+}
+
+/* Style for responsibilities list */
+.job-description ul {
+  padding-left: 20px;
+  margin: 0;
+  list-style-type: disc;
+}
+
+.job-description li {
+  margin-bottom: 5px;
 }
 
 .job-description li {
@@ -124,10 +141,10 @@
     font-size: 12px; /* Reduced font size for smaller screens */
     margin-bottom: 0px; /* Reduced margin bottom for smaller screens */
   }
-
   .job-description ul {
-    display: none;
+   display: inline;
   }
+ 
   .wrkImg{
     height: 300px;
   }
