--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -16,25 +16,34 @@
   
   /* Other styles... */
 .navRight{
+  flex: 6;
     color: white;
     width: auto;
-    margin-left: 100px;
+    margin-left: 80px;
     position: relative;
     justify-content: start;
     font-family:system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: xx-large;
     display: flex;
-    right: 0;
-    top: 0;
     }
 .navleft {
+
+    color: white;
+    margin-left: auto; /* Push the element to the right end */
+    font-size: x-large;
     display: flex;
-    position: fixed; /* Fixed position to stick to the right side */
-    justify-content: flex-end; /* Align items to the end of the flex container */
-    font-size: xx-large;
-    align-items: center; /* Center vertically */
-    right: 0; /* Align to the right side of the window */
-    top: 0; /* Align to the top of the window */
+    position: relative;
+    align-items: center;
+    justify-content: flex-end; /* Align items to the end */
+  }
+  
+  .NavItems{
+    color: white;
+    width: auto;
+    margin: 30px;
+    font-family:system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-size: x-large;
+
   }
   
 .NavItem{
